--- a/photoalbum/application/layouts/scripts/layout.phtml
+++ b/photoalbum/application/layouts/scripts/layout.phtml
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>PhotoAlbum </title>
 <?php //echo $this->headLink()->appendStylesheet('css/style.css') ?>
-<link rel="stylesheet" type="text/css" media="screen" href="<?=$this->baseUrl();?>/css/style.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="<?php echo $this->baseUrl();?>/css/style.css" />
 <?php echo $this->jQuery(); ?>
 </head>
 <body>
@@ -14,7 +14,7 @@
   <div id="img-top"></div>
   <div id="innderDiv">
     <div id="header">
-    <div id="homeLink" class="transparent" onClick="window.location='<?=$this->baseUrl();?>';" ></div>
+    <div id="homeLink" class="transparent" onClick="window.location='<?php echo $this->baseUrl();?>';" ></div>
 	</div>
     <div id="contents">
       <div id="left-column"></div>
