--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -1,11 +1,14 @@
 <h2><?php echo $this->title;?></h2>
 <div class="right-align"><a href="<?php echo $this->url(array('controller'=>'user',
-'action'=>'show'));?>">Add new album</a></div>
+ 'action'=>'friend')); ?>">Add to friends list</a></div>
 <div id="container">
+	<?php echo $this->user['nickname']; ?><br />
+	<?php echo $this->user['email']; ?><br />
+	<br />
+	
   <?php if ( count($this->albums) > 0 ) {?>
   <div id="cpanel">
   <?php foreach($this->albums as $album) : ?>
-  <?php print_r($this->user); ?>
     <div class="icon"> <a href="#"><img src="images/gallery/1.jpg" width="140" height="110" /> <span><?php echo ucwords($albums['title'])?></span></a> </div>
     <?php endforeach; ?>
   </div>
