--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -1,19 +1,26 @@
 <h2><?php echo $this->title;?></h2>
+
 <div class="right-align"><?php echo $this->ajaxLink("Add to friends list",
 "/user/friend", array('update' => '#left-content')); ?></div>
 <div id="container">
-	<?php echo $this->user['nickname']; ?><br />
-	<?php echo $this->user['email']; ?><br />
-	<br />
 	
   <?php if ( count($this->albums) > 0 ) {?>
   <div id="cpanel">
-  <?php foreach($this->albums as $album) : ?>
-    <div class="icon"> <a href="#"><img src="images/gallery/1.jpg" width="140" height="110" /> <span><?php echo ucwords($albums['title'])?></span></a> </div>
+    <?php foreach($this->albums as $album) : ?>
+    <div class="icon">
+        <a href="#"><img src="images/gallery/1.jpg" width="140" height="110" />
+        <span><?php echo ucwords($albums['title'])?></span></a>
+    </div>
     <?php endforeach; ?>
   </div>
+   
+  
   <?php }else{?>
   No Album Found.
   <?php }?>
+    
   <div class="clear"  ></div>
 </div>
+
+
+<h2>Friends list</h2>
