--- a/photoalbum/public/css/style.css
+++ b/photoalbum/public/css/style.css
@@ -37,7 +37,7 @@ h2{ color:#009EE5; margin:0px; padding:0px;}
 img{ border:none;}
 #cpanel {  text-align: center;  vertical-align: middle; }
 
-#cpanel div.icon   { margin: 3px; }
+#cpanel div.icon   { position:relative; margin: 3px; vertical-align:text-bottom; }
 #cpanel div.icon a { 
 	display: block; float: left;
 	height: 130px !important;
@@ -46,22 +46,22 @@ img{ border:none;}
 	width: 110px; 
 	vertical-align: middle; 
 	text-decoration : none;
-	border: 1px solid #999999;
+	border: 1px solid #DDD;
 	margin:5px;
 	padding: 2px 5px 1px 5px;
 }
 
-#cpanel div.icon a:link    {  color : #CCCCCC;  }
+#cpanel div.icon a:link    {  color : #009EE5;  }
 #cpanel div.icon a:hover   { 
-	color : #FFFFFF; 
-	border: 1px solid #DDD;
+	color : #009EE5; 
+	border: 1px solid #009EE5;
 	padding: 3px 4px 0px 6px; 
 }
-#cpanel div.icon a:active  {  color : #CCCCCC;  }
-#cpanel div.icon a:visited {  color : #CCCCCC;  }
+#cpanel div.icon a:active  {  color : #009EE5;  }
+#cpanel div.icon a:visited {  color : #009EE5;  }
 
 #cpanel div.icon img { margin-top: 3px; margin-left:2px; }
-#cpanel div.icon span { display: block; padding-top: 3px;}
+#cpanel div.icon span { margin-top:3px;}
 
 /* For Pictures */
 #cpanel div.icon_picture   { margin: 3px; }
@@ -77,14 +77,14 @@ img{ border:none;}
 	padding: 2px 5px 1px 5px;
 }
 
-#cpanel div.icon_picture a:link    { color : #CCCCCC; }
+#cpanel div.icon_picture a:link    { color : #009EE5; }
 #cpanel div.icon_picture a:hover   { 
 	color : #FFFFFF; 
-	border: 1px solid #DDD;
+	border: 1px solid #009EE5;
 	padding: 3px 4px 0px 6px; 
 }
-#cpanel div.icon_picture a:active  { color : #CCCCCC;}
-#cpanel div.icon_picture a:visited { color : #CCCCCC;}
+#cpanel div.icon_picture a:active  { color : #009EE5;}
+#cpanel div.icon_picture a:visited { color : #009EE5;}
 
 #cpanel div.icon_picture img { margin-top: 6px; margin-left:0px; }
 #cpanel div.icon_picture span { display: block; padding-top: 3px;}
