prepended "../" to the img src to get pictures from the correct location

--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -8,7 +8,7 @@
   <div id="cpanel">
     <?php foreach($this->albums as $album) : ?>
     <div class="icon">
-        <a href="#"><img src="images/gallery/1.jpg" width="140" height="110" />
+        <a href="#"><img src="../images/gallery/1.jpg" width="140" height="110" />
         <span><?php echo ucwords($albums['title'])?></span></a>
     </div>
     <?php endforeach; ?>
