Problem with layout and albums are fixed

--- a/photoalbum/application/layouts/scripts/layout.phtml
+++ b/photoalbum/application/layouts/scripts/layout.phtml
@@ -27,6 +27,7 @@
       <div class="right-col"></div>
       <div id="right-column"></div>
     </div>
+    <div class="clear"></div>
   </div>
   <div id="img-bottom"></div>
 </div>
