--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -1,7 +1,6 @@
 <h2><?php echo $this->title;?></h2>
 
-<div class="right-align"><?php echo $this->ajaxLink("Add to friends list",
-"/user/friend", array('update' => '#left-content')); ?></div>
+<div class="right-align"> <!-- remove add as friend link --></div>
 <div id="container">
 	
   <?php if ( count($this->albums) > 0 ) {?>
@@ -21,6 +20,3 @@
     
   <div class="clear"  ></div>
 </div>
-
-
-<h2>Friends list</h2>
