--- a/photoalbum/application/layouts/scripts/layout.phtml
+++ b/photoalbum/application/layouts/scripts/layout.phtml
@@ -25,7 +25,41 @@
       <div class="left-col"></div>
       <div id="content-main"><?php echo $this->layout()->content; ?></div>
       <div class="right-col"></div>
-      <div id="right-column"></div>
+      <div id="right-column">
+	  
+<?php
+	$form = new Zend_Form;
+    $form->setAction($this->baseUrl().'/user/login')
+		 ->setMethod('post');
+		 
+	if($this->registered) //Change this value to some other to check if user is logged in
+	{
+		$form->addElement('submit', 'logout', array('label' => 'Logout'));
+	}
+	else
+	{
+		$username = $form->createElement('text', 'username');
+		$username->addValidator('alnum')
+				 ->addValidator('regex', false, array('/^[a-z]+/'))
+				 ->addValidator('stringLength', false, array(6, 20))
+				 ->setRequired(true)
+				 ->setLabel('Username')
+				 ->addFilter('StringToLower');
+
+		$password = $form->createElement('password', 'password');
+		$password->addValidator('StringLength', false, array(6))
+				 ->setRequired(true)
+				 ->setLabel('Password');
+
+		$form->addElement($username)
+			 ->addElement($password)
+			 ->addElement('submit', 'login', array('label' => 'Login'));
+	}
+		 
+	echo $form;
+
+?> 
+	  </div>
     </div>
     <div class="clear"></div>
   </div>
