--- a/photoalbum/application/views/scripts/album/index.phtml
+++ b/photoalbum/application/views/scripts/album/index.phtml
@@ -1,6 +1,4 @@
 <h2><?php echo $this->title;?></h2>
-<div class="right-align"><a href="<?php echo $this->url(array('controller'=>'album',
-'action'=>'create'));?>">Add new album</a></div>
 <div id="container">
   <?php if ( count($this->albums) > 0 ) {?>
   <div id="cpanel">
@@ -9,7 +7,7 @@
 		$cover = ($album['cover']) ? $album['cover'] : 'noimage.png' ;
 	?>
     <div class="icon">
-    <a href="<?=$this->baseUrl();?>/photo?album=<?php echo $album['id'];?>"> <img src="phpthumb/phpThumb.php?src=../images/gallery/<?php echo $cover;?>&w=140&h=110" /> <span><?php echo ucwords($album['name'])?></span></a>
+    <a href="<?php echo $this->baseUrl(); ?>/album/show?id=<?php echo $album['id'];?>"> <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $album['picture'];?>&w=140&h=110" /> <span><?php echo ucwords($album['name'])?></span></a>
     </div>
     <?php endforeach; ?>
   </div>
