--- a/photoalbum/application/views/scripts/photo/show.phtml
+++ b/photoalbum/application/views/scripts/photo/show.phtml
@@ -4,12 +4,8 @@ $(function() {
 });
 </script>
 <div id="breadcrumbs"><?php echo $this->title;?></div>
-
-
 <div class="right-align"><a href="<?php echo $this->url(array('controller'=>'album',
-'action'=>'update'));?>?id=<?php echo $this->album['id']; ?>" onclick="alert('This link will direct you to album editor page'); return false;">Edit album</a></div>
-
-
+'action'=>'create'));?>">Upload Photos</a></div>
 <div id="container">
   <?php if ( count($this->albumPhoto) > 0 ) {?>
   <div id="cpanel">
@@ -18,7 +14,7 @@ $(function() {
 		//$cover = ($album['cover']) ? $album['picture'] : 'noimage.png' ;
 	?>
     <div class="icon">
-    <a href="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=800&h=600"> <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=140&h=110" /> <span><?php echo ucwords($photo['name'])?></span></a>
+    <a href="phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=800&h=600"> <img src="phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=140&h=110" /> <span><?php echo ucwords($photo['name'])?></span></a>
     </div>
     <?php endforeach; ?>
   </div>
