--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -17,8 +17,8 @@
     <?php $i = 0; foreach($this->albums as $album) : ?>
     <div class="icon">
         <a href="<?php echo $this->url(array('controller'=>'album',
-'action'=>'show'));?>?id=<?php echo $album['id']; ?>" onclick="alert('This is link to the album view'); return false;">
-<img src="../images/gallery/1.jpg<?php //echo $this->covers[0]['picture']; ?>" width="140" height="110" />
+'action'=>'show'));?>?id=<?php echo $album['id']; ?>">
+<img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $album['picture'];?>&w=140&h=110" width="140" height="110" />
         <span><?php echo ucwords($album['name'])?></span></a>
     </div>
     <?php endforeach; ?>
