--- a/photoalbum/application/views/scripts/album/index.phtml
+++ b/photoalbum/application/views/scripts/album/index.phtml
@@ -1,4 +1,6 @@
 <h2><?php echo $this->title;?></h2>
+<div class="right-align"><a href="<?php echo $this->url(array('controller'=>'album',
+'action'=>'create'));?>">New album</a></div>
 <div id="container">
   <?php if ( count($this->albums) > 0 ) {?>
   <div id="cpanel">
