Changes in Photo controller. Uploading multiple files, deleteing photos. Album addition and deletion

--- a/photoalbum/application/views/scripts/album/index.phtml
+++ b/photoalbum/application/views/scripts/album/index.phtml
@@ -9,8 +9,8 @@
 		$cover = $album['picture'] ? $album['picture'] : 'noimage.png' ;
 	?>
     <div class="icon">
-    <a href="<?php echo $this->url(array('controller'=>'album',
-'action'=>'show'));?>?id=<?php echo $album['id'];?>"> <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $cover;?>&w=140&h=110" /> <span><?php echo ucwords($album['name'])?></span></a>
+    <a href="<?php echo $this->url(array('controller'=>'photo',
+'action'=>'index'));?>?id=<?php echo $album['id'];?>"> <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $cover;?>&w=140&h=110" /> <span><?php echo ucwords($album['name'])?></span></a>
     </div>
     <?php endforeach; ?>
   </div>
