--- a/photoalbum/application/views/scripts/album/create.phtml
+++ b/photoalbum/application/views/scripts/album/create.phtml
@@ -1,1 +1,6 @@
+<h2><?php echo $this->title;?></h2>
+<!--<div class="right-align"><a href="<?php echo $this->url(array('controller'=>'album',
+'action'=>'create'));?>">Back</a></div>
+--><div id="container">
 <?php echo $this->form ;?>
+</div>
