--- a/photoalbum/application/views/scripts/photo/create.phtml
+++ b/photoalbum/application/views/scripts/photo/create.phtml
@@ -1,7 +1,15 @@
 <h2><?php echo $this->title;?></h2>
 
-<div class="right-align"><a href="<?php echo $this->url(array('album'=>$this->album['id'],'controller'=>'photo',
+<div class="right-align"><a href="<?php echo $this->url(array('id'=>$this->album['id'],'controller'=>'photo',
 'action'=>'show'));?>">Back</a></div>
+
+<div class="left-align">
+<?php if ($this->isUpload) { 
+		$msg = ($this->piccount) ?'<font style="color:#33CC00;">'.$this->piccount.' Picture(s) have been uploaded.</font>':
+		'<font style="color:#FF0000;">'.$this->piccount.' Picture(s) have been uploaded.</font>';
+		echo $msg;
+}?>
+</div>
 
 <div id="container">
 <?php echo $this->form ;?>
