--- a/photoalbum/application/views/scripts/photo/index.phtml
+++ b/photoalbum/application/views/scripts/photo/index.phtml
@@ -1,4 +1,7 @@
 <script type="text/javascript">
+
+baseURL = '<?php echo $this->baseUrl();?>';
+//$('#cpanel a').lightBox({
 $(function() {
 	$('#cpanel a').lightBox({
 	imageLoading: '<?php echo $this->baseUrl();?>/images/lightbox-ico-loading.gif',
@@ -8,6 +11,43 @@ $(function() {
    });
 
 });
+
+function settitle(thisEle)
+{
+	$(thisEle).attr('title', '<a href="#">Download</a>');
+	$(thisEle).children(".dPhoto").css("display", "none");
+}
+function removetitle(thisEle)
+{
+	$(thisEle).attr('title', '');
+	$(thisEle).children(".dPhoto").css("display", "block");
+}
+
+function removeHref(DivEle)
+{
+	 var parentTag = $(DivEle).parent();
+	 $(parentTag).attr("href", "javascript:void(0)")
+
+	$(parentTag).click(function (event) 
+	{ 
+		 event.preventDefault(); 
+		 //here you can also do all sort of things 
+	});
+}
+
+function setHref(DivEle, hrefValue)
+{
+	 var parentTag = $(DivEle).parent();
+	 $(parentTag).attr("href", hrefValue);
+
+	 $(parentTag).removeAttr('disabled');
+}
+
+function deletePic( albumId, picId  )
+{
+	 URL = baseURL+'/photo/delete/pic/'+picId+'/album/'+albumId;
+	window.location = URL;
+}
 </script>
 <h2><?php echo $this->title;?></h2>
 <div class="left-align">
@@ -24,7 +64,9 @@ $(function() {
 		//$cover = ($album['cover']) ? $album['picture'] : 'noimage.png' ;
 	?>
     <div class="icon">
-    <a href="<?=$this->baseUrl();?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=800&h=600"> <img src="<?=$this->baseUrl();?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=140&h=110" /> <span><?php echo ucwords($photo['name'])?></span></a>
+    <a onmouseout="settitle(this);" onclick="settitle(this);" title="<a href='#'>Download</a>" onmouseover="removetitle(this);" href="<?=$this->baseUrl();?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=800&h=600"> <img src="<?=$this->baseUrl();?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=140&h=110" /> <span><?php echo ucwords($photo['name'])?></span>
+    <div class="dPhoto" onclick="deletePic('<?php echo $this->album['id'];?>', '<?php echo $photo['id'];?>');" onmouseover="removeHref(this);" onmouseout="setHref(this,'<?=$this->baseUrl();?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $photo['picture'];?>&w=800&h=600');">Delete</div>
+    </a>
     </div>
     <?php endforeach; ?>
   </div>
