--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -4,7 +4,7 @@
 <?php if($this->my_profile): ?>
 <div class="right-align">
 <a href="<?php echo $this->url(array('controller'=>'album',
-'action'=>'create'));?>" onclick="alert('This link will direct you to the album creation page in the future'); return false;">Create album</a>
+'action'=>'create'));?>">Create album</a>
 </div>
 <?php endif; ?>
 
