User list is done

--- a/photoalbum/application/layouts/scripts/layout.phtml
+++ b/photoalbum/application/layouts/scripts/layout.phtml
@@ -70,7 +70,7 @@ else:
 
 <?php endif; ?>
 
-<a href="<?php echo $this->baseUrl(); ?>/user" onclick="alert('User list will be here'); return false;">User list</a>
+<a href="<?php echo $this->baseUrl(); ?>/user">User list</a>
 	  </div>
     </div>
     <div class="clear"></div>
