--- a/photoalbum/public/css/style.css
+++ b/photoalbum/public/css/style.css
@@ -96,6 +96,8 @@ img{ border:none;}
    opacity: 0.6; 
 }
 
+.row { margin: 5px; }
+
 #title-label label{ font-weight:bold; font-size:12px;}
 
 .manage{ position:absolute; width:160px; margin:-8px 0px 0px 8px;}
