--- a/photoalbum/application/views/scripts/photo/show.phtml
+++ b/photoalbum/application/views/scripts/photo/show.phtml
@@ -60,13 +60,19 @@ function Imagedownload (frmId, url)
 }
 
 </script>
-<h2><?php echo $this->title;?></h2>
+<div id="breadcrumbs"><?php echo $this->title;?></div>
+<p>&nbsp;</p>
+<div class="right-align">
+<?php if ( $this->album['author'] == $this->userid ) {?>
+<a href="<?php echo $this->url(array('album'=>$this->album['id'],'controller'=>'photo','action'=>'create'));?>">Upload Photos</a> |
+<?php } ?>
+<a href="<?php echo $this->url(array('controller'=>'album',
+'action'=>'update'));?>?id=<?php echo $this->album['id']; ?>" onclick="alert('This link will direct you to album editor page'); return false;">Edit album</a></div>
+
 <div class="left-align">
-<!--<a href="<?php //echo $this->url(array('album'=>$this->album['id'],'controller'=>'album','action'=>'update'));?>">Edit Album</a>&nbsp;|-->
 <a href="<?php echo $this->url(array('album'=>$this->album['id'],'controller'=>'album','controller'=>'album','action'=>'delete'));?>">Delete Album</a>
 </div>
-<div class="right-align"><a href="<?php echo $this->url(array('album'=>$this->album['id'],'controller'=>'photo',
-'action'=>'create'));?>">Upload Photos</a></div>
+
 <div id="container">
   <?php if ( count($this->albumPhoto) > 0 ) {?>
   <div id="cpanel">
